# Qt_39_Homework_2

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
